--- a/src/styles/RootLayout.scss
+++ b/src/styles/RootLayout.scss
@@ -1,4 +1,10 @@
+// @import 'assets/styles/colors';
+
+
 .wrapper {
     // height: 100vh;
     // background-color: pink;
 }
+
+
+// @import "../styles/colors.scss"
